Bug 1696319 - Stick to GDK_IS_X11_DISPLAY for now, r=stransky

In D106726 this was changed to `GDK_IS_WAYLAND_DISPLAY` as a drive-by
cleanup, in order to eventually support compiling FF without X11 support.
Turns out that was misguided as it breaks compatability with
setups that have GTK compiled without Wayland support.

Stick to `GDK_IS_X11_DISPLAY` until we have a better solution.

Differential Revision: https://phabricator.services.mozilla.com/D107345